--- a/M4/index.css
+++ b/M4/index.css
@@ -92,3 +92,20 @@ nav a{
   background-color: #f5f5f5;
   height: 200vh;
 }
+
+/*Relleno primera parte de la página*/
+#contacto {
+  display: flex;
+  flex-direction: column;
+  font-family: "Oswald", sans-serif;
+  background-color: #f5f5f5;
+  height: 200vh;
+}
+/*Relleno primera parte de la página*/
+#about_us {
+  display: flex;
+  flex-direction: column;
+  font-family: "Oswald", sans-serif;
+  background-color: #f5f5f5;
+  height: 200vh;
+}
