--- a/M4/index.css
+++ b/M4/index.css
@@ -109,3 +109,11 @@ nav a{
   background-color: #f5f5f5;
   height: 200vh;
 }
+/*Relleno primera parte de la página*/
+#instrucciones {
+  display: flex;
+  flex-direction: column;
+  font-family: "Oswald", sans-serif;
+  background-color: #f5f5f5;
+  height: 200vh;
+}
