--- a/M4/index.css
+++ b/M4/index.css
@@ -54,6 +54,12 @@ nav a{
     color: black;
     font-weight: bold;
 }
+/*MAIN*/
+.imagen{
+  padding: 2rem 4rem;
+  box-shadow: 2rem;
+}
+/*MAIN*/
 /*Parte final con copyright y iconos para todas las páginas*/
 .footer {
   background-color: #111;
@@ -84,7 +90,7 @@ nav a{
   font-size: 14px;
 }
 
-/*Relleno primera parte de la página*/
+/*HISTORIA*/
 #historia {
   display: flex;
   flex-direction: column;
@@ -93,7 +99,7 @@ nav a{
   height: 200vh;
 }
 
-/*Relleno primera parte de la página*/
+/*CONTACTO*/
 #contacto {
   display: flex;
   flex-direction: column;
@@ -101,7 +107,7 @@ nav a{
   background-color: #f5f5f5;
   height: 200vh;
 }
-/*Relleno primera parte de la página*/
+/*ABOUT_US*/
 #about_us {
   display: flex;
   flex-direction: column;
@@ -109,7 +115,7 @@ nav a{
   background-color: #f5f5f5;
   height: 200vh;
 }
-/*Relleno primera parte de la página*/
+/*INSTRUCCIONES*/
 #instrucciones {
   display: flex;
   flex-direction: column;
