--- a/M4/index.css
+++ b/M4/index.css
@@ -55,7 +55,7 @@ nav a{
     font-weight: bold;
 }
 /*MAIN*/
-.publicidad{
+.hero{
   display: flex;
   align-items:center;
   align-content: center;
