--- a/M4/index.css
+++ b/M4/index.css
@@ -81,6 +81,38 @@ nav a{
   padding: auto;
   background-color: gray;
 }
+.caja2{
+  padding: auto;
+  background-color: gray;
+  text-align: center;
+  
+}
+.hero1{
+  margin-top: 10rem;
+  margin-right: 90%;
+}
+.fila::before{
+  content: "✅ ";
+}
+@keyframes aparecer {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.card {
+  padding: auto;
+  animation: aparecer linear both;
+  animation-timeline: view();
+  animation-range: entry 20% cover 40%;
+}
+
+
 /*MAIN*/
 /*Parte final con copyright y iconos para todas las páginas*/
 .footer {
