--- a/M4/index.css
+++ b/M4/index.css
@@ -221,4 +221,33 @@ nav a{
   background-color: #f5f5f5;
   height: 200vh;
 }
+.caja-ins{
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  margin-right: 10rem;
+  margin-left: 10rem;
+  padding: 3rem;
+  display: flex;
+  background-color: gray;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 3rem;
+
+}
+.tarjeta{
+  background-color: rgb(156, 147, 147);
+  display: flex;
+  flex-direction: column;
+  width: 15rem;
+  padding: 4rem;
+  border-radius: 8px;
+  text-align: center;
+  
+}
+.tarjeta img{
+  border: 2px solid;
+  width: 15rem;
+  height: 10rem;
+}
 
